# AgenticRealEstateSystem

./: .env.example  .gitignore  CLAUDE_RULES.md  DATA_LAYER_IMPLEMENTATION.md  LICENSE  LangGraph-Swarm_Docs.md  README.md  UV_PACKAGE_MANAGER_REPORT.md  api_server.py  check_env.py  comprehensive_nll_results.json  debug_openrouter_auth.py  demo_comparacao_final.py  demo_llama_vs_gemini.py  groq_specific_models_nll_test.json  llama_3_1_8b_instant_nll_test.json  main.py  mcp.json  nll_calculator_final.py  nll_comprehensive_solutions.json  nll_test_results.json  pydantic-ai.txt  pyproject.toml  pytest.ini  requirements-test.txt  simple_routing_test.py  start_server.py  test_hybrid_swarm.py  test_llama_3_1_8b_instant.py  test_openrouter_status.py  test_routing_fix.py  working_models_results.json
.claude/: settings.local.json
app/: __init__.py
app/agents/: __init__.py  hybrid_property.py  hybrid_scheduling.py  hybrid_search.py  manager.py  property.py  router.py  scheduling.py  search.py  supervisor.py
app/api/: __init__.py  dashboard.py
app/data/: README.md  __init__.py  base_services.py  data_manager.py  mock_system.py  real_api_system.py
app/database/: __init__.py  migration.py  schema.py
app/integrations/: __init__.py  mcp.py
app/models/: __init__.py  appointment.py  property.py  response.py  user.py
app/orchestration/: swarm.py  swarm_fixed.py  swarm_hybrid.py  unified_swarm.py
app/prompts/: __init__.py  property.py  scheduling.py  search.py
app/tools/: __init__.py  calendar.py  property.py
app/utils/: __init__.py  api_monitor.py  container.py  datetime_context.py  langsmith_config.py  logfire_config.py  logging.py  ollama_fallback.py
config/: __init__.py  api_config.py  settings.py
docs/: API_REFERENCE.md  CODER_IMPLEMENTATION_SUMMARY.md  CODE_QUALITY_ANALYSIS.md  CODE_REVIEW_REPORT.md  DOCUMENTATION_SUMMARY.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_GUIDE.md  ORCHESTRATION_FIX.md  ORCHESTRATION_SUMMARY.md  ROUTING_SYSTEM.md  SECURITY_AUDIT_SUMMARY.md  SETUP_GUIDE.md  UV_GUIDE.md  UV_MIGRATION_SUMMARY.md  UV_QUICK_START.md  UV_SETUP_COMPLETE.txt  data_layer.md  data_layer_quickstart.md  data_layer_summary.md
docs/architecture/: CONTEXT_ENGINEERING_DESIGN.md  LLM_INTEGRATION_DESIGN.md  MOCK_DATA_DESIGN.md  OBSERVABILITY_DESIGN.md  README.md  SYSTEM_ARCHITECTURE_DESIGN.md
docs/research/: RESEARCH_FINDINGS.md
docs/reviews/: README.md  REVIEW_SUMMARY.md  agents_review.md  data_layer_review.md  orchestration_review.md  type_safety_review.md
docs/testing/: QUICK_START_TESTING.md  TEST_DELIVERABLES.md  TEST_SUITE_SUMMARY.md  test_results.md
examples/: data_layer_demo.py  scalable_swarm_demo.py  swarm_demo.py
frontend/: debug_buttons.html  debug_chat_test.html  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx
hooks_tests/: IMPLEMENTACAO_COMPLETA.md  README_PRODUCTION_SYSTEM.md  SISTEMA_CORRIGIDO_COMPLETO.md  debug_swarm_state.py  demo_complete_system.py  real_conversation_hooks.py  real_monitoring_system.py  real_stress_testing.py  real_test_pipeline.py  run_production_system.py
logs/: .gitkeep  LOGFIRE_SETUP.md  README.md  SISTEMA_OBSERVABILIDADE_RESUMO.md
memory/agents/: README.md
memory/sessions/: README.md
scripts/: generate_miami_properties.py  generate_mock_data.py  load_miami_properties.py  nll_solutions_guide.py  setup.sh  start_backend.sh  start_frontend.sh  store_routing_decisions.sh  verify_data_layer.py
src/: __init__.py  requirements.txt
src/config/: __init__.py  config_manager.py
src/generators/: __init__.py  mock_property_generator.py
src/llm/: __init__.py  context_engineering.py  groq_client.py
src/observability/: __init__.py  langfuse_integration.py  logfire_integration.py
tests/: INDEX.md  QUICK_START.md  README.md  README_ESTRUTURA_TESTES.md  TEST_COVERAGE_REPORT.md  TEST_README.md  TEST_SUMMARY.json  __init__.py  conftest.py  pytest.ini  run_all_tests.sh  test_data_layer.py  test_router.py  test_unified_swarm.py
tests/agents/: __init__.py  recreate_property.py  test_agent.py  test_agent_modes.py  test_agent_openrouter.py  test_property_agent.py  test_real_agent.py  test_routing.py  test_scheduling.py  test_simple_agent.py
tests/api/: __init__.py  test_api_key.py  test_api_modes.py  test_api_real.py  test_api_simulation.py  test_real_api.py
tests/archived/: test_fixed_swarm.py  test_nll_access.py  test_nll_access_enhanced.py  test_quick_fix.py
tests/data/: __init__.py  test_data_manager.py  test_mock_local.py  test_mock_mode.py  test_mock_structure.py  test_mock_vs_real.py  test_new_mock_data.py  test_properties.py  test_properties_ids.py  test_property_context.py  test_property_ids.py
tests/debug/: __init__.py  debug_agent_execution.py  debug_api_response.py  debug_key_loading.py  debug_simple.py  debug_system.py  test_debug_swarm.py
tests/docs/: README_TESTING_SYSTEM.md  __init__.py  run_comprehensive_tests.py
tests/features/: __init__.py  test_routing.py  test_search_filters.py
tests/fixes/: __init__.py  fix_agents_env.py  fix_imports.py  fix_model_config.py  fix_swarm_models.py  fix_syntax.py  test_fix.py
tests/frontend/: __init__.py  test_chat_integration.html  test_frontend.html  test_frontend_integration.html
tests/generators/: __init__.py  test_mock_data_generation.py  test_mock_generator.py
tests/infrastructure/: __init__.py  test_config_simple.py  test_datetime_fix.py  test_env_debug.py  test_env_loading.py  test_fixes.py  test_logging_system.py  test_ollama_system.py
tests/integration/: __init__.py  test_api_integration.py  test_api_integration_fixed.py  test_end_to_end_flow.py  test_frontend_integration.py  test_full_conversation.py  test_pipeline_integration.py
tests/llm/: __init__.py  test_groq_client.py  test_groq_integration.py  test_observability.py
tests/models/: __init__.py  find_working_models.py  test_different_models.py  test_gemma3_model.py  test_groq_specific_models.py  test_maverick_direct.py  test_models.py  test_openrouter_direct.py  test_openrouter_pydantic.py
(+45 files in other folders)
